--- a/.gitignore
+++ b/.gitignore
@@ -1,63 +1,52 @@
-# Node modules directory
+# Node.js dependencies
 node_modules/
 
-# Log files
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
+
+# Environment variables
+.env
+.env.*.local
 
 # Dependency directories
 jspm_packages/
 
-# Environment variables file
-.env
+# TypeScript
+*.tsbuildinfo
+
+# VS Code settings
+.vscode/
+
+# IDE settings
+.idea/
+
+# macOS system files
+.DS_Store
+
+# Windows system files
+Thumbs.db
 
 # Build output
 dist/
 build/
 
-# System files
-.DS_Store
-Thumbs.db
-
-# IDE/editor-specific files
-.vscode/
-.idea/
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-
-# Miscellaneous
-*.log
-*.tmp
-
-# TypeScript
-*.tsbuildinfo
-
-# Coverage directory used by tools like istanbul
+# Testing
 coverage/
 
-# Next.js build output
-.next/
+# Package-lock and Yarn lock files
+package-lock.json
+yarn.lock
 
-# Nuxt.js build output
-.nuxt/
+# Other files
+*.swp
+*.swo
+*.swn
+*.swo
 
-# SvelteKit build output
-.svelte-kit/
-
-# Serverless directories
-.serverless/
-
-# Docker
-Dockerfile
-docker-compose.yml
-.dockerignore
-
-# macOS Finder
-*.DS_Store
-
-# Windows
-*.lnk
+# Temp files
+*.tmp
+*.temp
