--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mysql2": "^3.11.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "winston": "^3.14.2"
   }
 }
